tests/syntax/bad/testfile-literal-1.go
package main
func main() { x := 9223372036854775809 }
